--- a/Spotify/src/app/app.component.html
+++ b/Spotify/src/app/app.component.html
@@ -1,9 +1,11 @@
-<div class="row">
-  <div class="col-5">
-    <app-navbar></app-navbar>
-    <app-library></app-library>
-  </div>
-  <div class="col-7">
-    <router-outlet></router-outlet>
+<div class="container-fluid bg-black text-light">
+  <div class="row">
+    <div class="col-5 mt-3">
+      <app-navbar></app-navbar>
+      <app-library></app-library>
+    </div>
+    <div class="col-7 mt-3">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
