--- a/Spotify/src/app/navbar/navbar.component.scss
+++ b/Spotify/src/app/navbar/navbar.component.scss
@@ -1,1 +1,8 @@
 @import "../../_partial/svg";
+
+p{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: darkgrey;
+}
