aggiornamento grafica nav-bar e library

--- a/Spotify/src/app/app.component.html
+++ b/Spotify/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-black text-light">
+<div class="bg-black text-light containerAll">
   <div class="row">
     <div class="col-5 mt-3">
       <app-navbar></app-navbar>
