--- a/Spotify/src/app/navbar/navbar.component.scss
+++ b/Spotify/src/app/navbar/navbar.component.scss
@@ -1,8 +1,5 @@
-@import "../../_partial/svg";
+@import "../../partial/svg";
+@import "../../partial/font";
 
-p{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.3rem;
-  font-weight: 600;
-  color: darkgrey;
-}
+
+
