--- a/Spotify/src/app/app.component.html
+++ b/Spotify/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="bg-black text-light containerAll">
+<!-- <div class="bg-black text-light containerAll">
   <div class="row">
     <div class="col-5 mt-3">
       <app-navbar></app-navbar>
@@ -6,6 +6,9 @@
     </div>
     <div class="col-7 mt-3">
       <router-outlet></router-outlet>
+
     </div>
   </div>
-</div>
+</div> -->
+
+<router-outlet></router-outlet>
