--- a/Spotify/src/partial/_font.scss
+++ b/Spotify/src/partial/_font.scss
@@ -1,6 +1,7 @@
 p{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: 600;
   color: darkgrey;
+  cursor: pointer;
 }
